# sf-de

./: README.md
eng/sf/sf-extract/: .env.example  README.md  app.py  pyproject.toml
eng/sf/sf-extract/conf/: all.csv
eng/sf/sf-extract/sql/football/: category-1-1.sql  category-1-2.sql  category-2-1.sql
eng/sf/sf-extract/src/sf_extract/: config.py  salesforce_client.py
eng/sf/sf-extract/tests/: test_salesforce_client.py
